Package_Tools/include-C/gnutls/inarbeit/fertig/gnutls.h


typedef enum {
	GNUTLS_DIG_UNKNOWN = GNUTLS_MAC_UNKNOWN,
	GNUTLS_DIG_NULL = GNUTLS_MAC_NULL,
	GNUTLS_DIG_MD5 = GNUTLS_MAC_MD5,
	GNUTLS_DIG_SHA1 = GNUTLS_MAC_SHA1,
	GNUTLS_DIG_RMD160 = GNUTLS_MAC_RMD160,
	GNUTLS_DIG_MD2 = GNUTLS_MAC_MD2,
	GNUTLS_DIG_SHA256 = GNUTLS_MAC_SHA256,
	GNUTLS_DIG_SHA384 = GNUTLS_MAC_SHA384,
	GNUTLS_DIG_SHA512 = GNUTLS_MAC_SHA512,
	GNUTLS_DIG_SHA224 = GNUTLS_MAC_SHA224,
	GNUTLS_DIG_SHA3_224 = GNUTLS_MAC_SHA3_224,
	GNUTLS_DIG_SHA3_256 = GNUTLS_MAC_SHA3_256,
	GNUTLS_DIG_SHA3_384 = GNUTLS_MAC_SHA3_384,
	GNUTLS_DIG_SHA3_512 = GNUTLS_MAC_SHA3_512,
	GNUTLS_DIG_MD5_SHA1 = GNUTLS_MAC_MD5_SHA1,
	GNUTLS_DIG_GOSTR_94 = GNUTLS_MAC_GOSTR_94,
	GNUTLS_DIG_STREEBOG_256 = GNUTLS_MAC_STREEBOG_256,
	GNUTLS_DIG_STREEBOG_512 = GNUTLS_MAC_STREEBOG_512,
	GNUTLS_DIG_SHAKE_128 = GNUTLS_MAC_SHAKE_128,
	GNUTLS_DIG_SHAKE_256 = GNUTLS_MAC_SHAKE_256
} gnutls_digest_algorithm_t;
typedef enum {
	GNUTLS_CRT_UNKNOWN = 0,
	GNUTLS_CRT_X509 = 1,
	GNUTLS_CRT_OPENPGP = 2,
	GNUTLS_CRT_RAWPK = 3,
	GNUTLS_CRT_MAX = GNUTLS_CRT_RAWPK
} gnutls_certificate_type_t;
typedef struct gnutls_session_int *gnutls_session_t;
typedef struct {
	unsigned char *data;
	unsigned int size;
} gnutls_datum_t;
typedef enum {
	GNUTLS_SUPPLEMENTAL_UNKNOWN = 0,
} gnutls_supplemental_data_format_type_t;
typedef struct gnutls_certificate_credentials_st
	*gnutls_certificate_credentials_t;
typedef int (*gnutls_tdb_store_func)(const char *db_name, const char *host,
				     const char *service, time_t expiration,
				     const gnutls_datum_t *pubkey);
typedef int (*gnutls_tdb_store_commitment_func)(
	const char *db_name, const char *host, const char *service,
	time_t expiration, gnutls_digest_algorithm_t hash_algo,
	const gnutls_datum_t *hash);
typedef int (*gnutls_tdb_verify_func)(const char *db_name, const char *host,
				      const char *service,
				      const gnutls_datum_t *pubkey);
typedef struct gnutls_tdb_int *gnutls_tdb_t;
int gnutls_tdb_init(gnutls_tdb_t *tdb);
void gnutls_tdb_set_store_func(gnutls_tdb_t tdb, gnutls_tdb_store_func store);
void gnutls_tdb_set_store_commitment_func(
	gnutls_tdb_t tdb, gnutls_tdb_store_commitment_func cstore);
void gnutls_tdb_set_verify_func(gnutls_tdb_t tdb,
				gnutls_tdb_verify_func verify);
void gnutls_tdb_deinit(gnutls_tdb_t tdb);
int gnutls_verify_stored_pubkey(const char *db_name, gnutls_tdb_t tdb,
				const char *host, const char *service,
				gnutls_certificate_type_t cert_type,
				const gnutls_datum_t *cert, unsigned int flags);
#define GNUTLS_SCOMMIT_FLAG_ALLOW_BROKEN 1
int gnutls_store_commitment(const char *db_name, gnutls_tdb_t tdb,
			    const char *host, const char *service,
			    gnutls_digest_algorithm_t hash_algo,
			    const gnutls_datum_t *hash, time_t expiration,
			    unsigned int flags);
int gnutls_store_pubkey(const char *db_name, gnutls_tdb_t tdb, const char *host,
			const char *service,
			gnutls_certificate_type_t cert_type,
			const gnutls_datum_t *cert, time_t expiration,
			unsigned int flags);
int gnutls_load_file(const char *filename, gnutls_datum_t *data);
unsigned gnutls_url_is_supported(const char *url);
typedef enum {
	GNUTLS_PIN_USER = (1 << 0),
	GNUTLS_PIN_SO = (1 << 1),
	GNUTLS_PIN_FINAL_TRY = (1 << 2),
	GNUTLS_PIN_COUNT_LOW = (1 << 3),
	GNUTLS_PIN_CONTEXT_SPECIFIC = (1 << 4),
	GNUTLS_PIN_WRONG = (1 << 5)
} gnutls_pin_flag_t;
#define GNUTLS_PKCS11_PIN_USER GNUTLS_PIN_USER
#define GNUTLS_PKCS11_PIN_SO GNUTLS_PIN_SO
#define GNUTLS_PKCS11_PIN_FINAL_TRY GNUTLS_PIN_FINAL_TRY
#define GNUTLS_PKCS11_PIN_COUNT_LOW GNUTLS_PIN_COUNT_LOW
#define GNUTLS_PKCS11_PIN_CONTEXT_SPECIFIC GNUTLS_PIN_CONTEXT_SPECIFIC
#define GNUTLS_PKCS11_PIN_WRONG GNUTLS_PIN_WRONG
typedef int (*gnutls_pin_callback_t)(void *userdata, int attempt,
				     const char *token_url,
				     const char *token_label,
				     unsigned int flags, char *pin,
				     size_t pin_max);
void gnutls_certificate_set_pin_function(gnutls_certificate_credentials_t,
					 gnutls_pin_callback_t fn,
					 void *userdata);
typedef struct gnutls_buffer_st *gnutls_buffer_t;
int gnutls_buffer_append_data(gnutls_buffer_t, const void *data,
			      size_t data_size);
#define GNUTLS_UTF8_IGNORE_ERRS 1
int gnutls_utf8_password_normalize(const unsigned char *password,
				   unsigned password_len, gnutls_datum_t *out,
				   unsigned flags);
typedef void *gnutls_ext_priv_data_t;
void gnutls_ext_set_data(gnutls_session_t session, unsigned type,
			 gnutls_ext_priv_data_t);
int gnutls_ext_get_data(gnutls_session_t session, unsigned type,
			gnutls_ext_priv_data_t *);
unsigned gnutls_ext_get_current_msg(gnutls_session_t session);
typedef int (*gnutls_ext_recv_func)(gnutls_session_t session,
				    const unsigned char *data, size_t len);
typedef int (*gnutls_ext_send_func)(gnutls_session_t session,
				    gnutls_buffer_t extdata);
typedef void (*gnutls_ext_deinit_data_func)(gnutls_ext_priv_data_t data);
typedef int (*gnutls_ext_pack_func)(gnutls_ext_priv_data_t data,
				    gnutls_buffer_t packed_data);
typedef int (*gnutls_ext_unpack_func)(gnutls_buffer_t packed_data,
				      gnutls_ext_priv_data_t *data);
#define GNUTLS_EXT_RAW_FLAG_TLS_CLIENT_HELLO 1
#define GNUTLS_EXT_RAW_FLAG_DTLS_CLIENT_HELLO (1 << 1)
typedef int (*gnutls_ext_raw_process_func)(void *ctx, unsigned tls_id,
					   const unsigned char *data,
					   unsigned data_size);
int gnutls_ext_raw_parse(void *ctx, gnutls_ext_raw_process_func cb,
			 const gnutls_datum_t *data, unsigned int flags);
typedef enum {
	GNUTLS_EXT_ANY = 0,
	GNUTLS_EXT_APPLICATION = 1,
	GNUTLS_EXT_TLS = 2,
	GNUTLS_EXT_MANDATORY = 3,
	GNUTLS_EXT_NONE = 4,
	GNUTLS_EXT_VERSION_NEG = 5
} gnutls_ext_parse_type_t;
typedef enum {
	GNUTLS_EXT_FLAG_OVERRIDE_INTERNAL = 1,
	GNUTLS_EXT_FLAG_CLIENT_HELLO = (1 << 1),
	GNUTLS_EXT_FLAG_TLS12_SERVER_HELLO = (1 << 2),
	GNUTLS_EXT_FLAG_TLS13_SERVER_HELLO = (1 << 3),
	GNUTLS_EXT_FLAG_EE = (1 << 4), 
	GNUTLS_EXT_FLAG_HRR = (1 << 5),
	GNUTLS_EXT_FLAG_IGNORE_CLIENT_REQUEST = (1 << 6),
	GNUTLS_EXT_FLAG_TLS = (1 << 7),
	GNUTLS_EXT_FLAG_DTLS = (1 << 8)
} gnutls_ext_flags_t;
int gnutls_ext_register(const char *name, int type,
			gnutls_ext_parse_type_t parse_point,
			gnutls_ext_recv_func recv_func,
			gnutls_ext_send_func send_func,
			gnutls_ext_deinit_data_func deinit_func,
			gnutls_ext_pack_func pack_func,
			gnutls_ext_unpack_func unpack_func);
int gnutls_session_ext_register(gnutls_session_t, const char *name, int type,
				gnutls_ext_parse_type_t parse_point,
				gnutls_ext_recv_func recv_func,
				gnutls_ext_send_func send_func,
				gnutls_ext_deinit_data_func deinit_func,
				gnutls_ext_pack_func pack_func,
				gnutls_ext_unpack_func unpack_func,
				unsigned flags);
const char *gnutls_ext_get_name(unsigned int ext);
const char *gnutls_ext_get_name2(gnutls_session_t session, unsigned int tls_id,
				 gnutls_ext_parse_type_t parse_point);
typedef int (*gnutls_supp_recv_func)(gnutls_session_t session,
				     const unsigned char *data,
				     size_t data_size);
typedef int (*gnutls_supp_send_func)(gnutls_session_t session,
				     gnutls_buffer_t buf);
int gnutls_supplemental_register(const char *name,
				 gnutls_supplemental_data_format_type_t type,
				 gnutls_supp_recv_func supp_recv_func,
				 gnutls_supp_send_func supp_send_func);
int gnutls_session_supplemental_register(
	gnutls_session_t session, const char *name,
	gnutls_supplemental_data_format_type_t type,
	gnutls_supp_recv_func supp_recv_func,
	gnutls_supp_send_func supp_send_func, unsigned int flags);
void gnutls_supplemental_recv(gnutls_session_t session,
			      unsigned do_recv_supplemental);
void gnutls_supplemental_send(gnutls_session_t session,
			      unsigned do_send_supplemental);
typedef struct gnutls_anti_replay_st *gnutls_anti_replay_t;
int gnutls_anti_replay_init(gnutls_anti_replay_t *anti_replay);
void gnutls_anti_replay_deinit(gnutls_anti_replay_t anti_replay);
void gnutls_anti_replay_set_window(gnutls_anti_replay_t anti_replay,
				   unsigned int window);
void gnutls_anti_replay_enable(gnutls_session_t session,
			       gnutls_anti_replay_t anti_replay);
typedef int (*gnutls_db_add_func)(void *, time_t exp_time,
				  const gnutls_datum_t *key,
				  const gnutls_datum_t *data);
void gnutls_anti_replay_set_add_function(gnutls_anti_replay_t,
					 gnutls_db_add_func add_func);
void gnutls_anti_replay_set_ptr(gnutls_anti_replay_t, void *ptr);
typedef enum {
	GNUTLS_ENCRYPTION_LEVEL_INITIAL,
	GNUTLS_ENCRYPTION_LEVEL_EARLY,
	GNUTLS_ENCRYPTION_LEVEL_HANDSHAKE,
	GNUTLS_ENCRYPTION_LEVEL_APPLICATION
} gnutls_record_encryption_level_t;
typedef int (*gnutls_handshake_read_func)(gnutls_session_t session,
					  gnutls_record_encryption_level_t level,
					  gnutls_handshake_description_t htype,
					  const void *data, size_t data_size);
void gnutls_handshake_set_read_function(gnutls_session_t session,
					gnutls_handshake_read_func func);
int gnutls_handshake_write(gnutls_session_t session,
			   gnutls_record_encryption_level_t level,
			   const void *data, size_t data_size);
typedef int (*gnutls_handshake_secret_func)(
	gnutls_session_t session, gnutls_record_encryption_level_t level,
	const void *secret_read, const void *secret_write, size_t secret_size);
void gnutls_handshake_set_secret_function(gnutls_session_t session,
					  gnutls_handshake_secret_func func);
typedef int (*gnutls_alert_read_func)(gnutls_session_t session,
				      gnutls_record_encryption_level_t level,
				      gnutls_alert_level_t alert_level,
				      gnutls_alert_description_t alert_desc);
void gnutls_alert_set_read_function(gnutls_session_t session,
				    gnutls_alert_read_func func);
unsigned gnutls_fips140_mode_enabled(void);
typedef enum gnutls_fips_mode_t {
	GNUTLS_FIPS140_DISABLED = 0,
	GNUTLS_FIPS140_STRICT = 1,
	GNUTLS_FIPS140_SELFTESTS = 2,
	GNUTLS_FIPS140_LAX = 3,
	GNUTLS_FIPS140_LOG = 4
} gnutls_fips_mode_t;
#define GNUTLS_FIPS140_SET_MODE_THREAD 1
void gnutls_fips140_set_mode(gnutls_fips_mode_t mode, unsigned flags);
typedef struct gnutls_fips140_context_st *gnutls_fips140_context_t;
int gnutls_fips140_context_init(gnutls_fips140_context_t *context);
void gnutls_fips140_context_deinit(gnutls_fips140_context_t context);
typedef enum {
	GNUTLS_FIPS140_OP_INITIAL,
	GNUTLS_FIPS140_OP_APPROVED,
	GNUTLS_FIPS140_OP_NOT_APPROVED,
	GNUTLS_FIPS140_OP_ERROR
} gnutls_fips140_operation_state_t;
gnutls_fips140_operation_state_t
gnutls_fips140_get_operation_state(gnutls_fips140_context_t context);
int gnutls_fips140_push_context(gnutls_fips140_context_t context);
int gnutls_fips140_pop_context(void);
int gnutls_fips140_run_self_tests(void);
typedef enum {
	GNUTLS_KTLS_RECV = 1 << 0,
	GNUTLS_KTLS_SEND = 1 << 1,
	GNUTLS_KTLS_DUPLEX = GNUTLS_KTLS_RECV | GNUTLS_KTLS_SEND,
} gnutls_transport_ktls_enable_flags_t;
gnutls_transport_ktls_enable_flags_t
gnutls_transport_is_ktls_enabled(gnutls_session_t session);