Packages_2024/gnutls_3.8.3/gnutls/gnutls.inc


function gnutls_tdb_init(tdb: Pgnutls_tdb_t): longint; cdecl; external libgnutls;
procedure gnutls_tdb_set_store_func(tdb: Tgnutls_tdb_t; store: Tgnutls_tdb_store_func); cdecl; external libgnutls;
procedure gnutls_tdb_set_store_commitment_func(tdb: Tgnutls_tdb_t; cstore: Tgnutls_tdb_store_commitment_func); cdecl; external libgnutls;
procedure gnutls_tdb_set_verify_func(tdb: Tgnutls_tdb_t; verify: Tgnutls_tdb_verify_func); cdecl; external libgnutls;
procedure gnutls_tdb_deinit(tdb: Tgnutls_tdb_t); cdecl; external libgnutls;
function gnutls_verify_stored_pubkey(db_name: pchar; tdb: Tgnutls_tdb_t; host: pchar; service: pchar; cert_type: Tgnutls_certificate_type_t;
  cert: Pgnutls_datum_t; flags: dword): longint; cdecl; external libgnutls;

const
  GNUTLS_SCOMMIT_FLAG_ALLOW_BROKEN = 1;

function gnutls_store_commitment(db_name: pchar; tdb: Tgnutls_tdb_t; host: pchar; service: pchar; hash_algo: Tgnutls_digest_algorithm_t;
  hash: Pgnutls_datum_t; expiration: Ttime_t; flags: dword): longint; cdecl; external libgnutls;
function gnutls_store_pubkey(db_name: pchar; tdb: Tgnutls_tdb_t; host: pchar; service: pchar; cert_type: Tgnutls_certificate_type_t;
  cert: Pgnutls_datum_t; expiration: Ttime_t; flags: dword): longint; cdecl; external libgnutls;
function gnutls_load_file(filename: pchar; data: Pgnutls_datum_t): longint; cdecl; external libgnutls;
function gnutls_url_is_supported(url: pchar): dword; cdecl; external libgnutls;

type
  Pgnutls_pin_flag_t = ^Tgnutls_pin_flag_t;
  Tgnutls_pin_flag_t = longint;

const
  GNUTLS_PIN_USER = 1 shl 0;
  GNUTLS_PIN_SO = 1 shl 1;
  GNUTLS_PIN_FINAL_TRY = 1 shl 2;
  GNUTLS_PIN_COUNT_LOW = 1 shl 3;
  GNUTLS_PIN_CONTEXT_SPECIFIC = 1 shl 4;
  GNUTLS_PIN_WRONG = 1 shl 5;

const
  GNUTLS_PKCS11_PIN_USER = GNUTLS_PIN_USER;
  GNUTLS_PKCS11_PIN_SO = GNUTLS_PIN_SO;
  GNUTLS_PKCS11_PIN_FINAL_TRY = GNUTLS_PIN_FINAL_TRY;
  GNUTLS_PKCS11_PIN_COUNT_LOW = GNUTLS_PIN_COUNT_LOW;
  GNUTLS_PKCS11_PIN_CONTEXT_SPECIFIC = GNUTLS_PIN_CONTEXT_SPECIFIC;
  GNUTLS_PKCS11_PIN_WRONG = GNUTLS_PIN_WRONG;

type
  Tgnutls_pin_callback_t = function(userdata: pointer; attempt: longint; token_url: pchar; token_label: pchar; flags: dword; pin: pchar; pin_max: Tsize_t): longint; cdecl;

procedure gnutls_certificate_set_pin_function(para1: Tgnutls_certificate_credentials_t; fn: Tgnutls_pin_callback_t; userdata: pointer); cdecl; external libgnutls;

type
  Tgnutls_buffer_st = record
  end;
  Tgnutls_buffer_t = ^Tgnutls_buffer_st;
  Pgnutls_buffer_t = ^Tgnutls_buffer_t;

function gnutls_buffer_append_data(para1: Tgnutls_buffer_t; data: pointer; data_size: Tsize_t): longint; cdecl; external libgnutls;

const
  GNUTLS_UTF8_IGNORE_ERRS = 1;

function gnutls_utf8_password_normalize(password: pbyte; password_len: dword; out_: Pgnutls_datum_t; flags: dword): longint; cdecl; external libgnutls;

type
  Pgnutls_ext_priv_data_t = ^Tgnutls_ext_priv_data_t;
  Tgnutls_ext_priv_data_t = pointer;

procedure gnutls_ext_set_data(session: Tgnutls_session_t; _type: dword; para3: Tgnutls_ext_priv_data_t); cdecl; external libgnutls;
function gnutls_ext_get_data(session: Tgnutls_session_t; _type: dword; para3: Pgnutls_ext_priv_data_t): longint; cdecl; external libgnutls;
function gnutls_ext_get_current_msg(session: Tgnutls_session_t): dword; cdecl; external libgnutls;

type
  Tgnutls_ext_recv_func = function(session: Tgnutls_session_t; data: pbyte; len: Tsize_t): longint; cdecl;
  Tgnutls_ext_send_func = function(session: Tgnutls_session_t; extdata: Tgnutls_buffer_t): longint; cdecl;
  Tgnutls_ext_deinit_data_func = procedure(data: Tgnutls_ext_priv_data_t); cdecl;
  Tgnutls_ext_pack_func = function(data: Tgnutls_ext_priv_data_t; packed_data: Tgnutls_buffer_t): longint; cdecl;
  Tgnutls_ext_unpack_func = function(packed_data: Tgnutls_buffer_t; data: Pgnutls_ext_priv_data_t): longint; cdecl;

const
  GNUTLS_EXT_RAW_FLAG_TLS_CLIENT_HELLO = 1;
  GNUTLS_EXT_RAW_FLAG_DTLS_CLIENT_HELLO = 1 shl 1;

type
  Tgnutls_ext_raw_process_func = function(ctx: pointer; tls_id: dword; data: pbyte; data_size: dword): longint; cdecl;

function gnutls_ext_raw_parse(ctx: pointer; cb: Tgnutls_ext_raw_process_func; data: Pgnutls_datum_t; flags: dword): longint; cdecl; external libgnutls;

type
  Pgnutls_ext_parse_type_t = ^Tgnutls_ext_parse_type_t;
  Tgnutls_ext_parse_type_t = longint;

const
  GNUTLS_EXT_ANY = 0;
  GNUTLS_EXT_APPLICATION = 1;
  GNUTLS_EXT_TLS = 2;
  GNUTLS_EXT_MANDATORY = 3;
  GNUTLS_EXT_NONE = 4;
  GNUTLS_EXT_VERSION_NEG = 5;

type
  Pgnutls_ext_flags_t = ^Tgnutls_ext_flags_t;
  Tgnutls_ext_flags_t = longint;

const
  GNUTLS_EXT_FLAG_OVERRIDE_INTERNAL = 1;
  GNUTLS_EXT_FLAG_CLIENT_HELLO = 1 shl 1;
  GNUTLS_EXT_FLAG_TLS12_SERVER_HELLO = 1 shl 2;
  GNUTLS_EXT_FLAG_TLS13_SERVER_HELLO = 1 shl 3;
  GNUTLS_EXT_FLAG_EE = 1 shl 4;
  GNUTLS_EXT_FLAG_HRR = 1 shl 5;
  GNUTLS_EXT_FLAG_IGNORE_CLIENT_REQUEST = 1 shl 6;
  GNUTLS_EXT_FLAG_TLS = 1 shl 7;
  GNUTLS_EXT_FLAG_DTLS = 1 shl 8;

function gnutls_ext_register(name: pchar; _type: longint; parse_point: Tgnutls_ext_parse_type_t; recv_func: Tgnutls_ext_recv_func; send_func: Tgnutls_ext_send_func;
  deinit_func: Tgnutls_ext_deinit_data_func; pack_func: Tgnutls_ext_pack_func; unpack_func: Tgnutls_ext_unpack_func): longint; cdecl; external libgnutls;
function gnutls_session_ext_register(para1: Tgnutls_session_t; name: pchar; _type: longint; parse_point: Tgnutls_ext_parse_type_t; recv_func: Tgnutls_ext_recv_func;
  send_func: Tgnutls_ext_send_func; deinit_func: Tgnutls_ext_deinit_data_func; pack_func: Tgnutls_ext_pack_func; unpack_func: Tgnutls_ext_unpack_func; flags: dword): longint; cdecl; external libgnutls;
function gnutls_ext_get_name(ext: dword): pchar; cdecl; external libgnutls;
function gnutls_ext_get_name2(session: Tgnutls_session_t; tls_id: dword; parse_point: Tgnutls_ext_parse_type_t): pchar; cdecl; external libgnutls;

type
  Tgnutls_supp_recv_func = function(session: Tgnutls_session_t; data: pbyte; data_size: Tsize_t): longint; cdecl;
  Tgnutls_supp_send_func = function(session: Tgnutls_session_t; buf: Tgnutls_buffer_t): longint; cdecl;

function gnutls_supplemental_register(name: pchar; _type: Tgnutls_supplemental_data_format_type_t; supp_recv_func: Tgnutls_supp_recv_func; supp_send_func: Tgnutls_supp_send_func): longint; cdecl; external libgnutls;
function gnutls_session_supplemental_register(session: Tgnutls_session_t; name: pchar; _type: Tgnutls_supplemental_data_format_type_t; supp_recv_func: Tgnutls_supp_recv_func; supp_send_func: Tgnutls_supp_send_func;
  flags: dword): longint; cdecl; external libgnutls;
procedure gnutls_supplemental_recv(session: Tgnutls_session_t; do_recv_supplemental: dword); cdecl; external libgnutls;
procedure gnutls_supplemental_send(session: Tgnutls_session_t; do_send_supplemental: dword); cdecl; external libgnutls;

type
  Tgnutls_anti_replay_st = record
  end;
  Tgnutls_anti_replay_t = ^Tgnutls_anti_replay_st;
  Pgnutls_anti_replay_t = ^Tgnutls_anti_replay_t;

function gnutls_anti_replay_init(anti_replay: Pgnutls_anti_replay_t): longint; cdecl; external libgnutls;
procedure gnutls_anti_replay_deinit(anti_replay: Tgnutls_anti_replay_t); cdecl; external libgnutls;
procedure gnutls_anti_replay_set_window(anti_replay: Tgnutls_anti_replay_t; window: dword); cdecl; external libgnutls;
procedure gnutls_anti_replay_enable(session: Tgnutls_session_t; anti_replay: Tgnutls_anti_replay_t); cdecl; external libgnutls;

type
  Tgnutls_db_add_func = function(para1: pointer; exp_time: Ttime_t; key: Pgnutls_datum_t; data: Pgnutls_datum_t): longint; cdecl;

procedure gnutls_anti_replay_set_add_function(para1: Tgnutls_anti_replay_t; add_func: Tgnutls_db_add_func); cdecl; external libgnutls;
procedure gnutls_anti_replay_set_ptr(para1: Tgnutls_anti_replay_t; ptr: pointer); cdecl; external libgnutls;

type
  Pgnutls_record_encryption_level_t = ^Tgnutls_record_encryption_level_t;
  Tgnutls_record_encryption_level_t = longint;

const
  GNUTLS_ENCRYPTION_LEVEL_INITIAL = 0;
  GNUTLS_ENCRYPTION_LEVEL_EARLY = 1;
  GNUTLS_ENCRYPTION_LEVEL_HANDSHAKE = 2;
  GNUTLS_ENCRYPTION_LEVEL_APPLICATION = 3;

type
  Tgnutls_handshake_read_func = function(session: Tgnutls_session_t; level: Tgnutls_record_encryption_level_t; htype: Tgnutls_handshake_description_t; data: pointer; data_size: Tsize_t): longint; cdecl;

procedure gnutls_handshake_set_read_function(session: Tgnutls_session_t; func: Tgnutls_handshake_read_func); cdecl; external libgnutls;
function gnutls_handshake_write(session: Tgnutls_session_t; level: Tgnutls_record_encryption_level_t; data: pointer; data_size: Tsize_t): longint; cdecl; external libgnutls;

type
  Tgnutls_handshake_secret_func = function(session: Tgnutls_session_t; level: Tgnutls_record_encryption_level_t; secret_read: pointer; secret_write: pointer; secret_size: Tsize_t): longint; cdecl;

procedure gnutls_handshake_set_secret_function(session: Tgnutls_session_t; func: Tgnutls_handshake_secret_func); cdecl; external libgnutls;

type
  Tgnutls_alert_read_func = function(session: Tgnutls_session_t; level: Tgnutls_record_encryption_level_t; alert_level: Tgnutls_alert_level_t; alert_desc: Tgnutls_alert_description_t): longint; cdecl;

procedure gnutls_alert_set_read_function(session: Tgnutls_session_t; func: Tgnutls_alert_read_func); cdecl; external libgnutls;
function gnutls_fips140_mode_enabled: dword; cdecl; external libgnutls;

type
  Pgnutls_fips_mode_t = ^Tgnutls_fips_mode_t;
  Tgnutls_fips_mode_t = longint;

const
  GNUTLS_FIPS140_DISABLED = 0;
  GNUTLS_FIPS140_STRICT = 1;
  GNUTLS_FIPS140_SELFTESTS = 2;
  GNUTLS_FIPS140_LAX = 3;
  GNUTLS_FIPS140_LOG = 4;

const
  GNUTLS_FIPS140_SET_MODE_THREAD = 1;

procedure gnutls_fips140_set_mode(mode: Tgnutls_fips_mode_t; flags: dword); cdecl; external libgnutls;

procedure GNUTLS_FIPS140_SET_LAX_MODE;
procedure GNUTLS_FIPS140_SET_STRICT_MODE;

type
  Tgnutls_fips140_context_st = record
  end;
  Tgnutls_fips140_context_t = ^Tgnutls_fips140_context_st;
  Pgnutls_fips140_context_t = ^Tgnutls_fips140_context_t;

function gnutls_fips140_context_init(context: Pgnutls_fips140_context_t): longint; cdecl; external libgnutls;
procedure gnutls_fips140_context_deinit(context: Tgnutls_fips140_context_t); cdecl; external libgnutls;

type
  Pgnutls_fips140_operation_state_t = ^Tgnutls_fips140_operation_state_t;
  Tgnutls_fips140_operation_state_t = longint;

const
  GNUTLS_FIPS140_OP_INITIAL = 0;
  GNUTLS_FIPS140_OP_APPROVED = 1;
  GNUTLS_FIPS140_OP_NOT_APPROVED = 2;
  GNUTLS_FIPS140_OP_ERROR = 3;

function gnutls_fips140_get_operation_state(context: Tgnutls_fips140_context_t): Tgnutls_fips140_operation_state_t; cdecl; external libgnutls;
function gnutls_fips140_push_context(context: Tgnutls_fips140_context_t): longint; cdecl; external libgnutls;
function gnutls_fips140_pop_context: longint; cdecl; external libgnutls;
function gnutls_fips140_run_self_tests: longint; cdecl; external libgnutls;

type
  Pgnutls_transport_ktls_enable_flags_t = ^Tgnutls_transport_ktls_enable_flags_t;
  Tgnutls_transport_ktls_enable_flags_t = longint;

const
  GNUTLS_KTLS_RECV = 1 shl 0;
  GNUTLS_KTLS_SEND = 1 shl 1;
  GNUTLS_KTLS_DUPLEX = GNUTLS_KTLS_RECV or GNUTLS_KTLS_SEND;

function gnutls_transport_is_ktls_enabled(session: Tgnutls_session_t): Tgnutls_transport_ktls_enable_flags_t; cdecl; external libgnutls;
